[package]
name = "zz"
version = "0.1.0"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snap = "0.2.5"
zip = "0.5.4"
ar = "0.8.0"
tar = "0.4.26"
flate2 = "1.0.13"
strum = "0.17.1"
strum_macros = "0.17.1"
unrar = "0.4.4"
