[package]
name = "zz"
version = "0.1.0"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snap = "0.2.5"
zip = "0.5.4"
ar = "0.8.0"
tar = "0.4.26"
flate2 = "1.0.13"
strum = "0.17.1"
strum_macros = "0.17.1"
unrar = "0.4.4"
lz4 = "1.23.1"
snafu = "0.6.2"
anyhow = "1.0.26"
clap = "2.33.0"
lazy_static = "1.4.0"
human-hash = "0.3.0"
rand = "0.7.3"
